# reachy_mini_conversation_app_local

./: .env.example  .env.jetson  .gitattributes  CHANGES.md  FASTRTC_INTEGRATION.md  JETSON_SETUP.md  MIGRATION_SUMMARY.md  README.md  available_servers.md  pyproject.toml  requirements.txt  vad_server_layout.md
.github/: pull_request_template.md
.github/workflows/: lint.yml
src/reachy_mini_conversation_app/: config.py  console.py  gradio_personality.py  local_audio.py  main.py  moves.py  openai_realtime.py  utils.py
src/reachy_mini_conversation_app/profiles/short_victorian_butler/: instructions.txt
src/reachy_mini_conversation_app/prompts/: default_prompt.txt
src/reachy_mini_conversation_app/static/: index.html  main.js
src/reachy_mini_conversation_app/tools/: core_tools.py
src/reachy_mini_conversation_app/vision/: processors.py
